--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -19,13 +19,24 @@ $btn-darken-percent: 7%;
   }
 }
 
+@mixin get-btn-base($btn-color, $btn-bg, $btn-border, $section-color) {
+  @include button-variant($btn-color, $btn-bg, $btn-border);
+  @include gradient-vertical($section-color, darken($section-color, 6%), 0%, 100%);
+  &:hover,
+  &:focus {
+    @include gradient-vertical(darken($section-color, 6%), darken($section-color, 12%), 0%, 100%);
+    border-color: darken($section-color, 6%);
+  }
+}
+
+
 //
 // Buttons
 // --------------------------------------------------
 
 // Common styles
 .btn {
-  padding: 7px 14px;
+  // padding: 7px 14px;
 
   // Remove the gradient for the pressed/active state
   &:active,
@@ -41,161 +52,60 @@ $btn-darken-percent: 7%;
 }
 
 // Buttons sizes
-.btn-lg {
-  padding: 10px 16px;
-  border-radius: 3px;
-  font-size: 16px;
-}
-.btn-sm {
-  padding: 4px 12px;
-  border-radius: 3px;
-  font-size: $font-size-base;
-}
-.btn-xs {
-  padding: 1px 8px;
-  border-radius: 3px;
-  font-size: 13px;
-}
+.btn-lg { font-size: 16px; }
+.btn-sm { font-size: $font-size-base;}
+.btn-xs { font-size: 13px; }
 
-
-a, .btn-link {
-  color: #1BAC7E;
-  &:hover { color: #1BAC7E; }
+a,
+.btn-link {
+  color: $link-color;
+  &:hover { color: $link-hover-color; }
 }
 
 .btn-default {
-  @include gradient-vertical($start-color: #FFFFFF, $end-color: #F7F7F7);
-  @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-  border-top-color: #DCDCDC;
-  border-right-color: #D8D8D8;
-  border-bottom-color: #D4D4D4;
-  border-left-color: #D8D8D8;
-
-  &:hover {
-    @include gradient-vertical($start-color: darken(#FFFFFF, $btn-darken-percent), $end-color: darken(#F7F7F7, $btn-darken-percent));
-    @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-    border-top-color: darken(#DCDCDC, $btn-darken-percent);
-    border-right-color: darken(#D8D8D8, $btn-darken-percent);
-    border-bottom-color: darken(#D4D4D4, $btn-darken-percent);
-    border-left-color: darken(#D8D8D8, $btn-darken-percent);
-  }
-
-  &:active,
-  &.active {
-    border-color: #B7B7B7;
-    background-color: #E5E5E5;
-    background-image: none;
-    box-shadow: inset 0 0 6px rgba(0,0,0,.12);
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    @include opacity(1);
-    border-color: #D9D9D9;
-    color: #A4A1A0;
+  @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+  @include gradient-vertical(white, darken(white, 6%), 0%, 100%);
+  &:hover,
+  &:focus {
+    @include gradient-vertical(darken(white, 3%), darken(white, 9%), 0%, 100%);
+    border-color: darken(#ddd, 12%);
   }
 }
 
 .btn-primary {
-  @include gradient-vertical($start-color: #29B285, $end-color: #1BA377);
-  @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-  @include add-active(#058A65);
-  border-top-color: #279F79;
-  border-right-color: #219973;
-  border-bottom-color: #18906B;
-  border-left-color: #219973;
-
-  &:hover {
-    @include gradient-vertical($start-color: darken(#29B285, $btn-darken-percent), $end-color: darken(#1BA377, $btn-darken-percent));
-    @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-    border-top-color: darken(#279F79, $btn-darken-percent);
-    border-right-color: darken(#219973, $btn-darken-percent);
-    border-bottom-color: darken(#18906B, $btn-darken-percent);
-    border-left-color: darken(#219973, $btn-darken-percent);
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    @include opacity(.6);
-    border-top-color: #279F79;
-    border-right-color: #219973;
-    border-bottom-color: #18906B;
-    border-left-color: #219973;
-  }
+  @include get-btn-base($btn-primary-color, $btn-primary-bg, $btn-primary-border, $brand-primary);
 }
-
-//
-// Translator
-// --------------------------------------------------
+.btn-success {
+  @include get-btn-base($btn-success-color, $btn-success-bg, $btn-success-border, $brand-success);
+}
+.btn-info {
+  @include get-btn-base($btn-info-color, $btn-info-bg, $btn-info-border, $brand-info);
+}
+.btn-warning {
+  @include get-btn-base($btn-warning-color, $btn-warning-bg, $btn-warning-border, $brand-warning);
+}
+.btn-danger {
+  @include get-btn-base($btn-danger-color, $btn-danger-bg, $btn-danger-border, $brand-danger);
+}
 
 .translator {
   .btn-primary {
-    @include gradient-vertical($start-color: #97D3CA, $end-color: #89C5BC);
-    @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-    @include add-active(#78ACA4);
-    border-top-color: #8AC2B9;
-    border-right-color: #83BBB2;
-    border-bottom-color: #7CB3AB;
-    border-left-color: #83BBB2;
-
-    &:hover {
-      @include gradient-vertical($start-color: darken(#97D3CA, $btn-darken-percent), $end-color: darken(#89C5BC, $btn-darken-percent));
-      @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-      border-top-color: darken(#8AC2B9, $btn-darken-percent);
-      border-right-color: darken(#83BBB2, $btn-darken-percent);
-      border-bottom-color: darken(#7CB3AB, $btn-darken-percent);
-      border-left-color: darken(#83BBB2, $btn-darken-percent);
-    }
-
-    &.disabled,
-    &[disabled],
-    fieldset[disabled] & {
-      @include opacity(.6);
-    }
+    @include get-btn-base($btn-translator-color, $btn-translator-bg, $btn-translator-border, $brand-translator);
   }
 
-  a, .btn-link { color: #79B1A5; }
-}
-
-//
-// Developer
-// --------------------------------------------------
-.btn-danger,
-.developer .btn-primary {
-  @include gradient-vertical($start-color: #EB6752, $end-color: #DD5943);
-  @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-  @include add-active(#C14B38);
-  border-top-color: #CD5A47;
-  border-right-color: #C65340;
-  border-bottom-color: #BE4C39;
-  border-left-color: #C65340;
-
-  &:hover {
-    @include gradient-vertical($start-color: darken(#EB6752, $btn-darken-percent), $end-color: darken(#DD5943, $btn-darken-percent));
-    @include reset-filter(); // Disable gradients for IE9 because filter bleeds through rounded corners
-    border-top-color: darken(#CD5A47, $btn-darken-percent);
-    border-right-color: darken(#C65340, $btn-darken-percent);
-    border-bottom-color: darken(#BE4C39, $btn-darken-percent);
-    border-left-color: darken(#C65340, $btn-darken-percent);
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    @include opacity(.6);
+  a, .btn-link {
+    color: $link-translator-color;
+    &:hover { color: $link-translator-hover-color; }
   }
 }
 
 .developer {
   .btn-primary {
-    &.disabled,
-    &[disabled],
-    fieldset[disabled] & {
-      @include opacity(.6);
-    }
+    @include get-btn-base($btn-developer-color, $btn-developer-bg, $btn-developer-border, $brand-developer);
   }
 
-  a, .btn-link { color: #EA5E46; }
+  a, .btn-link {
+    color: $link-developer-color;
+    &:hover { color: $link-developer-hover-color; }
+  }
 }
