add html & css for style/colors

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,6 +12,9 @@ $gengo-gray-light:      #a6a3a1 !default;
 $gengo-blue:            #98d7cc !default;
 $gengo-green:           #1cad7e !default;
 $gengo-lime-green:      #b0d482 !default;
+$gengo-lemon:           #c3ea94 !default;
+$gengo-lgreen:          #aedbb3 !default;
+$gengo-beige:           #f1f2c8 !default;
 $gengo-yellow:          #e0da79 !default;
 $gengo-red:             #ea5e47 !default;
 
