--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,13 +1,13 @@
 .box {
-  padding-right: 24px;
-  padding-left:  24px;
+  padding-right: ($grid-gutter-width / 2);
+  padding-left:  ($grid-gutter-width / 2);
   border: 1px solid #DBDBDB;
   border-radius: 3px;
   background-color: $box-bg;
 
   @media (min-width: $screen-sm-min) {
-    padding-right: ($grid-gutter-width / 2);
-    padding-left:  ($grid-gutter-width / 2);
+    padding-right: $grid-gutter-width;
+    padding-left:  $grid-gutter-width;
   }
 }
 
