--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -76,12 +76,12 @@ $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
-$font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-h1:            30px !default;
+$font-size-h2:            24px !default;
+$font-size-h3:            18px !default;
+$font-size-h4:            $font-size-base !default;
+$font-size-h5:            12px !default;
+$font-size-h6:            11px !default;
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.5 !default; // 20/14
