add HTML&CSS for componets Navbar

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -2,3 +2,13 @@
   margin-top: 14px;
   margin-bottom: 14px;
 }
+
+.form-control {
+  @include box-shadow(none);
+  border-top-color: #b8b8b8;
+}
+
+
+.form-search {
+  // TODO: add an search icon to background
+}
