--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -32,3 +32,12 @@
     &.gengo-white { border: 1px solid $table-border-color; }
   }
 }
+
+
+// Navbar
+
+.navbar-styles {
+  .navbar {
+    border: 1px solid  $table-border-color;
+  }
+}
