--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -39,6 +39,7 @@ $hover-dark-gray:         #413C38 !default;
   background-color: $navbar-background-color;
 
   > .container-fluid {
+    padding-right: 0;
     padding-left: 0;
 
     .navbar-brand {
@@ -73,8 +74,13 @@ $hover-dark-gray:         #413C38 !default;
   }
 
   .navbar-brand {
-    @include vertical-align(20px);
+    padding-top: 16px;
+    padding-bottom: 10px;
+    padding-left: 29px;
+    padding-right: 26px;
     background-color: $brand-customer;
+    font-size: 20px;
+    line-height: 20px;
 
     &:before {
       display: block;
@@ -91,6 +97,18 @@ $hover-dark-gray:         #413C38 !default;
   .navbar-toggle .icon-bar {
     background-color: #fff;
   }
+
+  .navbar-form.navbar-right:last-child {
+    margin-right: inherit;
+  }
+
+  .btn {
+    margin: 9px 18px 0;
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  p { color: #A5A39F; }
 }
 
 //
@@ -110,6 +128,8 @@ $hover-dark-gray:         #413C38 !default;
 
   .navbar-brand {
     @include vertical-align(26px);
+    padding-right: 18px;
+    padding-left: 18px;
 
     &:before {
       width: 26px;
@@ -129,6 +149,8 @@ $hover-dark-gray:         #413C38 !default;
 
   .navbar-brand {
     @include vertical-align(24px);
+    padding-right: 18px;
+    padding-left: 18px;
 
     &:before {
       width: 26px;
@@ -148,6 +170,8 @@ $hover-dark-gray:         #413C38 !default;
 
   .navbar-brand {
     @include vertical-align(27px);
+    padding-right: 18px;
+    padding-left: 18px;
 
     &:before {
       width: 27px;
