--- a/css/gengo.css
+++ b/css/gengo.css
@@ -1,10 +1,17 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+ul,
+ol {
+  padding-left: 32px;
+}
+ul li,
+ol li {
+  line-height: 24px;
+}
+
+blockquote {
+  padding: 0 18px;
+  margin: 0 0 18px;
+  border-left: 3px solid #dddddd;
+}
 
 .box {
   padding-right: 18px;
@@ -80,20 +87,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFF0F0F0', GradientType=0);
 }
-.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active {
+.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle {
   color: #4c4643;
-  background-color: #ebebeb;
+  background-color: #e6e6e6;
   border-color: #adadad;
 }
-.open .btn-default.dropdown-toggle {
-  color: #4c4643;
-  background-color: #ebebeb;
-  border-color: #adadad;
-}
-.btn-default:active, .btn-default.active {
-  background-image: none;
-}
-.open .btn-default.dropdown-toggle {
+.btn-default:active, .btn-default.active, .open > .btn-default.dropdown-toggle {
   background-image: none;
 }
 .btn-default.disabled, .btn-default.disabled:hover, .btn-default.disabled:focus, .btn-default.disabled:active, .btn-default.disabled.active, .btn-default[disabled], .btn-default[disabled]:hover, .btn-default[disabled]:focus, .btn-default[disabled]:active, .btn-default[disabled].active, fieldset[disabled] .btn-default, fieldset[disabled] .btn-default:hover, fieldset[disabled] .btn-default:focus, fieldset[disabled] .btn-default:active, fieldset[disabled] .btn-default.active {
@@ -123,20 +122,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF1CAD7E', endColorstr='#FF18936B', GradientType=0);
 }
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #168a64;
+  background-color: #15815e;
   border-color: #106248;
 }
-.open .btn-primary.dropdown-toggle {
-  color: white;
-  background-color: #168a64;
-  border-color: #106248;
-}
-.btn-primary:active, .btn-primary.active {
-  background-image: none;
-}
-.open .btn-primary.dropdown-toggle {
+.btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
@@ -166,20 +157,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFAEDBB3', endColorstr='#FF99D29F', GradientType=0);
 }
-.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active {
+.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open > .btn-success.dropdown-toggle {
   color: white;
-  background-color: #92ce98;
+  background-color: #8bcb92;
   border-color: #72c07b;
 }
-.open .btn-success.dropdown-toggle {
-  color: white;
-  background-color: #92ce98;
-  border-color: #72c07b;
-}
-.btn-success:active, .btn-success.active {
-  background-image: none;
-}
-.open .btn-success.dropdown-toggle {
+.btn-success:active, .btn-success.active, .open > .btn-success.dropdown-toggle {
   background-image: none;
 }
 .btn-success.disabled, .btn-success.disabled:hover, .btn-success.disabled:focus, .btn-success.disabled:active, .btn-success.disabled.active, .btn-success[disabled], .btn-success[disabled]:hover, .btn-success[disabled]:focus, .btn-success[disabled]:active, .btn-success[disabled].active, fieldset[disabled] .btn-success, fieldset[disabled] .btn-success:hover, fieldset[disabled] .btn-success:focus, fieldset[disabled] .btn-success:active, fieldset[disabled] .btn-success.active {
@@ -209,20 +192,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF4D4843', endColorstr='#FF3D3935', GradientType=0);
 }
-.btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active {
+.btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open > .btn-info.dropdown-toggle {
   color: white;
-  background-color: #373430;
+  background-color: #322f2b;
   border-color: #1f1d1b;
 }
-.open .btn-info.dropdown-toggle {
-  color: white;
-  background-color: #373430;
-  border-color: #1f1d1b;
-}
-.btn-info:active, .btn-info.active {
-  background-image: none;
-}
-.open .btn-info.dropdown-toggle {
+.btn-info:active, .btn-info.active, .open > .btn-info.dropdown-toggle {
   background-image: none;
 }
 .btn-info.disabled, .btn-info.disabled:hover, .btn-info.disabled:focus, .btn-info.disabled:active, .btn-info.disabled.active, .btn-info[disabled], .btn-info[disabled]:hover, .btn-info[disabled]:focus, .btn-info[disabled]:active, .btn-info[disabled].active, fieldset[disabled] .btn-info, fieldset[disabled] .btn-info:hover, fieldset[disabled] .btn-info:focus, fieldset[disabled] .btn-info:active, fieldset[disabled] .btn-info.active {
@@ -252,20 +227,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFE5D369', endColorstr='#FFE0CB4F', GradientType=0);
 }
-.btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active {
+.btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
   color: white;
-  background-color: #dfc946;
+  background-color: #ddc63e;
   border-color: #d3b925;
 }
-.open .btn-warning.dropdown-toggle {
-  color: white;
-  background-color: #dfc946;
-  border-color: #d3b925;
-}
-.btn-warning:active, .btn-warning.active {
-  background-image: none;
-}
-.open .btn-warning.dropdown-toggle {
+.btn-warning:active, .btn-warning.active, .open > .btn-warning.dropdown-toggle {
   background-image: none;
 }
 .btn-warning.disabled, .btn-warning.disabled:hover, .btn-warning.disabled:focus, .btn-warning.disabled:active, .btn-warning.disabled.active, .btn-warning[disabled], .btn-warning[disabled]:hover, .btn-warning[disabled]:focus, .btn-warning[disabled]:active, .btn-warning[disabled].active, fieldset[disabled] .btn-warning, fieldset[disabled] .btn-warning:hover, fieldset[disabled] .btn-warning:focus, fieldset[disabled] .btn-warning:active, fieldset[disabled] .btn-warning.active {
@@ -295,20 +262,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEA5E47', endColorstr='#FFE7462C', GradientType=0);
 }
-.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open > .btn-danger.dropdown-toggle {
   color: white;
-  background-color: #e63e22;
+  background-color: #e4371a;
   border-color: #c42f16;
 }
-.open .btn-danger.dropdown-toggle {
-  color: white;
-  background-color: #e63e22;
-  border-color: #c42f16;
-}
-.btn-danger:active, .btn-danger.active {
-  background-image: none;
-}
-.open .btn-danger.dropdown-toggle {
+.btn-danger:active, .btn-danger.active, .open > .btn-danger.dropdown-toggle {
   background-image: none;
 }
 .btn-danger.disabled, .btn-danger.disabled:hover, .btn-danger.disabled:focus, .btn-danger.disabled:active, .btn-danger.disabled.active, .btn-danger[disabled], .btn-danger[disabled]:hover, .btn-danger[disabled]:focus, .btn-danger[disabled]:active, .btn-danger[disabled].active, fieldset[disabled] .btn-danger, fieldset[disabled] .btn-danger:hover, fieldset[disabled] .btn-danger:focus, fieldset[disabled] .btn-danger:active, fieldset[disabled] .btn-danger.active {
@@ -338,20 +297,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF98D7CC', endColorstr='#FF82CEC1', GradientType=0);
 }
-.translator .btn-primary:hover, .translator .btn-primary:focus, .translator .btn-primary:active, .translator .btn-primary.active {
+.translator .btn-primary:hover, .translator .btn-primary:focus, .translator .btn-primary:active, .translator .btn-primary.active, .open > .translator .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #7bccbd;
+  background-color: #73c9ba;
   border-color: #5abfad;
 }
-.open .translator .btn-primary.dropdown-toggle {
-  color: white;
-  background-color: #7bccbd;
-  border-color: #5abfad;
-}
-.translator .btn-primary:active, .translator .btn-primary.active {
-  background-image: none;
-}
-.open .translator .btn-primary.dropdown-toggle {
+.translator .btn-primary:active, .translator .btn-primary.active, .open > .translator .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .translator .btn-primary.disabled, .translator .btn-primary.disabled:hover, .translator .btn-primary.disabled:focus, .translator .btn-primary.disabled:active, .translator .btn-primary.disabled.active, .translator .btn-primary[disabled], .translator .btn-primary[disabled]:hover, .translator .btn-primary[disabled]:focus, .translator .btn-primary[disabled]:active, .translator .btn-primary[disabled].active, fieldset[disabled] .translator .btn-primary, fieldset[disabled] .translator .btn-primary:hover, fieldset[disabled] .translator .btn-primary:focus, fieldset[disabled] .translator .btn-primary:active, fieldset[disabled] .translator .btn-primary.active {
@@ -387,20 +338,12 @@ a:hover,
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFEA5E47', endColorstr='#FFE7462C', GradientType=0);
 }
-.developer .btn-primary:hover, .developer .btn-primary:focus, .developer .btn-primary:active, .developer .btn-primary.active {
+.developer .btn-primary:hover, .developer .btn-primary:focus, .developer .btn-primary:active, .developer .btn-primary.active, .open > .developer .btn-primary.dropdown-toggle {
   color: white;
-  background-color: #e63e22;
+  background-color: #e4371a;
   border-color: #c42f16;
 }
-.open .developer .btn-primary.dropdown-toggle {
-  color: white;
-  background-color: #e63e22;
-  border-color: #c42f16;
-}
-.developer .btn-primary:active, .developer .btn-primary.active {
-  background-image: none;
-}
-.open .developer .btn-primary.dropdown-toggle {
+.developer .btn-primary:active, .developer .btn-primary.active, .open > .developer .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .developer .btn-primary.disabled, .developer .btn-primary.disabled:hover, .developer .btn-primary.disabled:focus, .developer .btn-primary.disabled:active, .developer .btn-primary.disabled.active, .developer .btn-primary[disabled], .developer .btn-primary[disabled]:hover, .developer .btn-primary[disabled]:focus, .developer .btn-primary[disabled]:active, .developer .btn-primary[disabled].active, fieldset[disabled] .developer .btn-primary, fieldset[disabled] .developer .btn-primary:hover, fieldset[disabled] .developer .btn-primary:focus, fieldset[disabled] .developer .btn-primary:active, fieldset[disabled] .developer .btn-primary.active {
@@ -636,6 +579,29 @@ a:hover,
   margin-bottom: 14px;
 }
 
+.form-control {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-top-color: #b8b8b8;
+}
+.form-control:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-color: #1cad7e;
+}
+
+.translator .form-control:focus {
+  border-color: #98d7cc;
+}
+
+.developer .form-control:focus {
+  border-color: #ea5e47;
+}
+
+.admin .form-control:focus {
+  border-color: #4d4843;
+}
+
 .modal-content {
   padding: 32px 36px 36px;
   border: 0;
@@ -704,6 +670,7 @@ a:hover,
   background-color: white;
 }
 .navbar > .container-fluid {
+  padding-right: 0;
   padding-left: 0;
 }
 .navbar > .container-fluid .navbar-brand {
@@ -735,11 +702,13 @@ a:hover,
   background-color: white;
 }
 .navbar .navbar-brand {
-  padding-top: 14.5px !important;
-  padding-bottom: 13.5px !important;
+  padding-top: 16px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  padding-right: 26px;
+  background-color: #1cad7e;
   font-size: 20px;
   line-height: 20px;
-  background-color: #1cad7e;
 }
 .navbar .navbar-brand:before {
   display: block;
@@ -755,6 +724,17 @@ a:hover,
 }
 .navbar .navbar-toggle .icon-bar {
   background-color: #fff;
+}
+.navbar .navbar-form.navbar-right:last-child {
+  margin-right: inherit;
+}
+.navbar .btn {
+  margin: 9px 18px 0;
+  font-size: 13px;
+  line-height: 16px;
+}
+.navbar p {
+  color: #A5A39F;
 }
 
 @media (max-width: 768px) {
@@ -774,6 +754,13 @@ a:hover,
 }
 .customer .navbar .navbar-brand {
   background-color: #1cad7e;
+}
+
+.translator .navbar .navbar-brand,
+.developer .navbar .navbar-brand,
+.admin .navbar .navbar-brand {
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
 @media (max-width: 768px) {
@@ -827,10 +814,10 @@ a:hover,
   background-color: #ea5e47;
 }
 .developer .navbar .navbar-brand {
-  padding-top: 12.5px !important;
-  padding-bottom: 11.5px !important;
-  font-size: 24px;
-  line-height: 24px;
+  padding-top: 11.5px !important;
+  padding-bottom: 10.5px !important;
+  font-size: 26px;
+  line-height: 26px;
 }
 .developer .navbar .navbar-brand:before {
   width: 26px;
