--- a/css/gengo-bootstrap-theme.css
+++ b/css/gengo-bootstrap-theme.css
@@ -1,3 +1,11 @@
+/*!
+ * Copyright 2011-2014 Gengo, Inc.
+ * * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at :
+ * http://www.apache.org/licenses/LICENSE-2.0
+ */
+
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
