--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -7,9 +7,11 @@
 @import "grid";
 @import "buttons";
 @import "icons";
+@import "navs";
 @import "forms";
 @import "modals";
 @import "status";
+@import "breadcrumbs";
 
 // customer & default
 $brand-color: $brand-customer;
