update HTML&CSS for navs content

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -441,7 +441,7 @@ $nav-tabs-active-link-hover-color:          $gengo-gray !default;
 $nav-tabs-active-link-hover-border-color:   #ddd !default;
 
 $nav-tabs-justified-link-border-color:            #ddd !default;
-$nav-tabs-justified-active-link-border-color:     $body-bg !default;
+$nav-tabs-justified-active-link-border-color:     #fff !default;
 
 //== Pills
 $nav-pills-border-radius:                   $border-radius-base !default;
