--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -9,6 +9,7 @@
 @import "icons";
 @import "navs";
 @import "forms";
+@import "dropdowns";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
