--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -73,8 +73,9 @@ $font-semibold:          600 !default;
 $font-bold:              700 !default;
 
 $font-size-base:          14px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-large:         16px !default;
+$font-size-small:         13px !default;
+
 
 $font-size-h1:            30px !default;
 $font-size-h2:            24px !default;
