--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -64,6 +64,8 @@ $hover-dark-gray:         #413C38 !default;
         color: #fff;
         transition: none;
       }
+
+      li { line-height: 21px; }
     }
 
     .active a,
