fix default button border color

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -167,7 +167,7 @@ $btn-font-weight:                400 !default;
 
 $btn-default-color:              $text-color !default;
 $btn-default-bg:                 #fff !default;
-$btn-default-border:             #ccc !default;
+$btn-default-border:             #dbdbdb !default;
 
 $btn-primary-color:              #fff !default;
 $btn-primary-bg:                 $brand-primary !default;
