--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -19,9 +19,11 @@ navigation:
   <!-- CSS -->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="assets/css/gengo-bootstrap-theme.css">
+  <link rel="stylesheet" href="assets/css/bootstrap-multiselect.css">
   <link rel="stylesheet" href="assets/css/gengo.css">
-  <link rel="stylesheet" href="assets/css/docs.css">
   <link rel="stylesheet" href="assets/css/docs.min.css">
+  <link rel="stylesheet" href="assets/css/docs.css">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 </head>
 <body>
   <header class="navbar navbar-static-top ge-navbar" role="banner">
@@ -65,6 +67,7 @@ navigation:
   <!-- JS -->
   <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./assets/js/bootstrap-multiselect.js"></script>
   <script src="./assets/js/main.js"></script>
 
 </body>
