--- a/liquid/_includes/components/tables.html
+++ b/liquid/_includes/components/tables.html
@@ -1,47 +1,221 @@
 <div class="box">
   <h1 id="tables">Tables</h1>
   <hr/>
-
+  <h2>Single line</h2>
   <table class="table">
     <thead>
       <tr>
-        <th>REWARD</th>
-        <th>TEXT</th>
-        <th>LANG.</th>
-        <th>WORDS</th>
-        <th>TIME LEFT</th>
+        <th class="col-md-2">REWARD</th>
+        <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
+        <th class="col-md-1">LANG.</th>
+        <th class="col-md-1">WORDS</th>
+        <th class="col-md-1">TIME LEFT</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>$6.25</td>
-        <td>Some random text here...</td>
-        <td>en > jp</td>
+        <td class="reward">$6.25</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+        <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
         <td>8523</td>
         <td>6:56</td>
       </tr>
       <tr>
-        <td>$321.24</td>
-        <td>Some random text here...</td>
-        <td>de > jp</td>
+        <td class="reward">$321.24</td>
+        <td class="text">Exerci tation lorem ullamcorper suscipit loborti...</td>
+        <td><span class="lang-from">de</span><span class="lang-to">jp</span></td>
         <td>365</td>
         <td>13:22</td>
       </tr>
       <tr>
-        <td>$33.24</td>
-        <td>Some random text here...</td>
-        <td>zh > jp</td>
+        <td class="reward">$33.24</td>
+        <td class="text">Sadipscing elitr, sed diam nonumy emod tem...</td>
+        <td><span class="lang-from">zh</span><span class="lang-to">jp</span></td>
         <td>187</td>
         <td>13:45</td>
       </tr>
       <tr>
-        <td>$65.36</td>
-        <td>Some random text here...</td>
-        <td>ko > jp</td>
+        <td class="reward">$65.36</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+        <td><span class="lang-from">ko</span><span class="lang-to">jp</span></td>
         <td>526</td>
         <td>8:12</td>
       </tr>
     </tbody>
   </table>
+{% highlight html %}
+<!-- Single line -->
+<table class="table">
+  <thead>
+    <tr>
+      <th class="col-md-2">REWARD</th>
+      <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
+      <th class="col-md-2">LANG.</th>
+      <th class="col-md-1">WORDS</th>
+      <th class="col-md-1">TIME LEFT</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="reward">$6.25</td>
+      <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+      <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
+      <td>8523</td>
+      <td>6:56</td>
+    </tr>
+  </tbody>
+</table>
+{% endhighlight %}
 
+  <h2>Two line</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th class="col-md-2">REWARD</th>
+        <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
+        <th class="col-md-2">LANG.</th>
+        <th class="col-md-1">WORDS</th>
+        <th class="col-md-1">TIME LEFT</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="reward">$6.25</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy emod...</td>
+        <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
+        <td>8523</td>
+        <td>6:56</td>
+      </tr>
+      <tr>
+        <td class="reward">$321.24</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy emod...</td>
+        <td><span class="lang-from">de</span><span class="lang-to">jp</span></td>
+        <td>365</td>
+        <td>13:22</td>
+      </tr>
+      <tr>
+        <td class="reward">$33.24</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy emod...</td>
+        <td><span class="lang-from">zh</span><span class="lang-to">jp</span></td>
+        <td>187</td>
+        <td>13:45</td>
+      </tr>
+      <tr>
+        <td class="reward">$65.36</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy emod...</td>
+        <td><span class="lang-from">ko</span><span class="lang-to">jp</span></td>
+        <td>526</td>
+        <td>8:12</td>
+      </tr>
+    </tbody>
+  </table>
+{% highlight html %}
+<!-- Two line -->
+<table class="table">
+  <thead>
+    <tr>
+      <th class="col-md-2">REWARD</th>
+      <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
+      <th class="col-md-2">LANG.</th>
+      <th class="col-md-1">WORDS</th>
+      <th class="col-md-1">TIME LEFT</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="reward">$6.25</td>
+      <td class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy emod...</td>
+      <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
+      <td>8523</td>
+      <td>6:56</td>
+    </tr>
+  </tbody>
+</table>
+{% endhighlight %}
+  <h2>Compact</h2>
+  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th class="col-md-2">REWARD</th>
+        <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
+        <th class="col-md-1">LANG.</th>
+        <th class="col-md-1">WORDS</th>
+        <th class="col-md-1">TIME LEFT</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="reward">$6.25</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+        <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
+        <td>8523</td>
+        <td>6:56</td>
+      </tr>
+      <tr>
+        <td class="reward">$321.24</td>
+        <td class="text">Exerci tation lorem ullamcorper suscipit loborti...</td>
+        <td><span class="lang-from">de</span><span class="lang-to">jp</span></td>
+        <td>365</td>
+        <td>13:22</td>
+      </tr>
+      <tr>
+        <td class="reward">$33.24</td>
+        <td class="text">Sadipscing elitr, sed diam nonumy emod tem...</td>
+        <td><span class="lang-from">zh</span><span class="lang-to">jp</span></td>
+        <td>187</td>
+        <td>13:45</td>
+      </tr>
+      <tr>
+        <td class="reward">$65.36</td>
+        <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+        <td><span class="lang-from">ko</span><span class="lang-to">jp</span></td>
+        <td>526</td>
+        <td>8:12</td>
+      </tr>
+    </tbody>
+  </table>
+{% highlight html %}
+<!-- Compact -->
+<table class="table table-condensed">
+  <thead>
+    <tr>
+      <th class="col-md-2">REWARD</th>
+      <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
+      <th class="col-md-1">LANG.</th>
+      <th class="col-md-1">WORDS</th>
+      <th class="col-md-1">TIME LEFT</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="reward">$6.25</td>
+      <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+      <td><span class="lang-from">en</span><span class="lang-to">jp</span></td>
+      <td>8523</td>
+      <td>6:56</td>
+    </tr>
+    <tr>
+      <td class="reward">$321.24</td>
+      <td class="text">Exerci tation lorem ullamcorper suscipit loborti...</td>
+      <td><span class="lang-from">de</span><span class="lang-to">jp</span></td>
+      <td>365</td>
+      <td>13:22</td>
+    </tr>
+    <tr>
+      <td class="reward">$33.24</td>
+      <td class="text">Sadipscing elitr, sed diam nonumy emod tem...</td>
+      <td><span class="lang-from">zh</span><span class="lang-to">jp</span></td>
+      <td>187</td>
+      <td>13:45</td>
+    </tr>
+    <tr>
+      <td class="reward">$65.36</td>
+      <td class="text">Lorem ipsum dolor sit amet, consetetur...</td>
+      <td><span class="lang-from">ko</span><span class="lang-to">jp</span></td>
+      <td>526</td>
+      <td>8:12</td>
+    </tr>
+  </tbody>
+</table>
+{% endhighlight %}
 </div>
