--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -11,6 +11,7 @@
 @import "navs";
 @import "forms";
 @import "dropdowns";
+@import "tables";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
