--- a/liquid/_includes/components/tables.html
+++ b/liquid/_includes/components/tables.html
@@ -5,7 +5,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="col-md-2">REWARD</th>
+        <th class="col-md-1 reward">REWARD</th>
         <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
         <th class="col-md-1">LANG.</th>
         <th class="col-md-1">WORDS</th>
@@ -48,7 +48,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th class="col-md-2">REWARD</th>
+      <th class="col-md-1 reward">REWARD</th>
       <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
       <th class="col-md-2">LANG.</th>
       <th class="col-md-1">WORDS</th>
@@ -71,7 +71,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th class="col-md-2">REWARD</th>
+        <th class="col-md-1 reward">REWARD</th>
         <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
         <th class="col-md-2">LANG.</th>
         <th class="col-md-1">WORDS</th>
@@ -114,7 +114,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th class="col-md-2">REWARD</th>
+      <th class="col-md-1 reward">REWARD</th>
       <th class="col-md-5 translator">TEXT<span class="caret"></span></th>
       <th class="col-md-2">LANG.</th>
       <th class="col-md-1">WORDS</th>
@@ -136,7 +136,7 @@
   <table class="table table-condensed">
     <thead>
       <tr>
-        <th class="col-md-2">REWARD</th>
+        <th class="col-md-1 reward">REWARD</th>
         <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
         <th class="col-md-1">LANG.</th>
         <th class="col-md-1">WORDS</th>
@@ -179,7 +179,7 @@
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th class="col-md-2">REWARD</th>
+      <th class="col-md-1 reward">REWARD</th>
       <th class="col-md-6 translator">TEXT<span class="caret"></span></th>
       <th class="col-md-1">LANG.</th>
       <th class="col-md-1">WORDS</th>
